# arxiv-smart-mcp

./: .gitignore  AGENTS.md  README.md  config.yaml.template  justfile  pyproject.toml  pyrightconfig.json
config/codespell/: ignore.txt
mcp/: arxiv-smart.ts  package.json
scripts/: smoke-test.sh
src/: main.py
src/arxivsmart/: __init__.py  config.py
src/arxivsmart/api/: app.py  routes_info.py  routes_paper.py  routes_search.py  utils.py
src/arxivsmart/api/models/: info.py  paper.py  search.py
src/arxivsmart/arxiv/: __init__.py  client.py  parser.py  rate_limiter.py  types.py
src/arxivsmart/clients/: __init__.py  base.py  paper.py  search.py
stubs/defusedxml/: ElementTree.pyi  __init__.pyi
stubs/fastapi/: __init__.pyi  responses.pyi  testclient.pyi
stubs/httpx/: __init__.pyi
stubs/markdownify/: __init__.pyi
stubs/pydantic/: __init__.pyi
stubs/starlette/: __init__.pyi  requests.pyi  types.pyi
tests/: test_api_models.py  test_api_routes.py  test_api_utils.py  test_arxiv_client.py  test_clients.py  test_config.py  test_parser.py  test_rate_limiter.py
tests_e2e/: conftest.py  test_e2e.py
